fix blog image bug on small screens

--- a/src/sass/_blog.scss
+++ b/src/sass/_blog.scss
@@ -34,6 +34,10 @@
   max-width: 950px;
   margin: 0 auto;
   position: relative;
+
+  img {
+    max-width: 100%;
+  }
   
   h1, h2, h3, h4, h5, h6 {
     color: $pc-pink;
